# mlopsexp

./: app.py  models.py  pyproject.toml  requirements.txt  test.http  test_app.py  test_database.py
.github/workflows/: ci.yml
instance/: users.db
