[tool.poetry]
name = "galvao"
version = "0.1.0"
description = "É um pacote que vai criar e testar uma aplicação"
authors = ["afonsolelis <afonso.brandao@prof.inteli.edu.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.4"
pandas = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
